# smart-garden

./: LICENSE  README.md
plot/: plot.py  requirements.txt
sense/: config.ini  pyproject.toml
sense/src/: main.py
sense/src/readers/: humidity.py  moisture.py  temperature.py
sense/src/writers/: environment.py  http_writer.py  location.py  plant.py
serve/: config.ini  pyproject.toml
serve/src/: main.py
serve/src/data/: database.py  objects.py
serve/src/database/: database.py
serve/src/templates/: environment.html  plant.html
store/: apply.py  v0.sql  v0_1.sql
